2003-01-21  Brian Gough  <brian.gough@network-theory.co.uk>

	* test.m: skip trans=113 for complex matrix on SYRK tests.

Tue Feb 19 20:50:27 2002  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_cblas.h: added extern "C"

Mon Jul  2 22:21:00 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: added missing #include <config.h>

Fri Apr 27 19:53:10 2001  Brian Gough  <bjg@network-theory.co.uk>

	* source_tpmv_r.h: moved index declarations to more restricted scope

	* source_rotmg.h: changed declaration y1 to y in order to avoid
 	confusion with function y0(x) in C library. Also changed x1 to x.

	* source_syr2k_r.h: error where lda was used instead of ldb in
 	syr2k_r was not picked up by any tests! Now fixed

Thu Apr 12 16:46:16 2001  Brian Gough  <bjg@network-theory.co.uk>

	* all routines now included for Level 1, 2, 3-- passes blas test
 	suite for numerical results, but no error handling yet

	* split out from blas directory to make an independent blas
 	library
