@@ -1,3 +1,8 @@
+2009-06-24  Brian Gough  <bjg@network-theory.co.uk>
+
+	* source_scal_c.h source_scal_r.h: remove needless use of OFFSET
+	macro when incX is known to be positive
+
 2003-01-21  Brian Gough  <brian.gough@network-theory.co.uk>
 
 	* test.m: skip trans=113 for complex matrix on SYRK tests.
